--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -1,8 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Movies clustering by plot\n",
+    "\n",
+    "<p style=\"text-align: justify;\">\n",
+    "    <br /> \n",
+    "When I was a kid my two favourites movies were Bravehart and Gladiator, but now is Forrest Gump.\n",
+    "    <br /> \n",
+    "<br /> \n",
+    "I found this dataset on Datacamp uploaded by Anubhav Singh, which has the top 100 movies of all time with the plots from Wikipedia and IMDb. The idea is to find relations between movies based on the plot using NLP tools. I will try to find out why I liked those movies the most.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Extract and transform"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +141,7 @@
        "4     In the early years of World War II, December 1...  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,8 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -215,13 +246,13 @@
        "4     It is early December 1941. American expatriate...  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Combine the plots from Wikipedia and IMdB\n",
+    "# Combine the plots from Wikipedia and IMDb\n",
     "df['plot'] = df['wiki_plot'].astype(str) + '\\n' + df['imdb_plot'].astype(str)\n",
     "\n",
     "# Drop the wiki_plot and imdb_plot columns\n",
@@ -230,8 +261,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Tokenization and stemming"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -268,8 +313,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Vectorizing with TF-IDF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +351,28 @@
     "                                   ngram_range=(1,3))\n",
     "\n",
     "# Fit and transform the tfidf_vectorizer with the plot\n",
-    "tfidf_matrix = tfidf_vectorizer.fit_transform([x for x in movies_df[\"plot\"]])\n",
+    "tfidf_matrix = tfidf_vectorizer.fit_transform([x for x in df[\"plot\"]])\n",
     "\n",
     "print(tfidf_matrix.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Clustering with K-Means"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +480,7 @@
        "4     It is early December 1941. American expatriate...        3  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,8 +507,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Dendogram"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +552,7 @@
     "\n",
     "# Plot the dendrogram, using title as label column\n",
     "dendrogram_ = dendrogram(mergings, orientation=\"left\",\n",
-    "               labels=[x for x in movies_df[\"title\"]],\n",
+    "               labels=[x for x in df[\"title\"]],\n",
     "               leaf_font_size=50)\n",
     "\n",
     "# Adjust the plot\n",
@@ -478,11 +565,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Conclusion\n",
+    "\n",
+    "<p style=\"text-align: justify;\">\n",
+    "    <br /> \n",
+    "Bravehart's most similar movie is Gladiator, it can be seen at the yellow branch. That would explain why were they my favourite movies when I was a kid.\n",
+    "    <br /> \n",
+    "<br /> \n",
+    "On the other hand, Forrest Gump is a movie that doesen't have much similarities with others as seen on the green branch, maybe that is te reason why is my favourite movie now.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
