--- a/movies.ipynb
+++ b/movies.ipynb
@@ -7,11 +7,7 @@
     "# Movies clustering by plot\n",
     "\n",
     "<p style=\"text-align: justify;\">\n",
-    "    <br /> \n",
-    "When I was a kid my two favourites movies were Bravehart and Gladiator, but now is Forrest Gump.\n",
-    "    <br /> \n",
-    "<br /> \n",
-    "I found this dataset on Datacamp uploaded by Anubhav Singh, which has the top 100 movies of all time with the plots from Wikipedia and IMDb. The idea is to find relations between movies based on the plot using NLP tools. I will try to find out why I liked those movies the most.\n",
+    "Most of the times the movies are related by features such as gender, director, year, country of orign among others. Other type of relation widley use by prediction algorithms is the similarities between users. But in this case I wanted to try if we can associate movies based upon the plots published in Wikipedia and IMDb. The project takes this plots and tokenize, stem, vectorize, cluster and plot them. \n",
     "</p>"
    ]
   },
@@ -252,10 +248,9 @@
     }
    ],
    "source": [
-    "# Combine the plots from Wikipedia and IMDb\n",
+    "# Combine the plots from Wikipedia and IMDb into one Corpus\n",
     "df['plot'] = df['wiki_plot'].astype(str) + '\\n' + df['imdb_plot'].astype(str)\n",
     "\n",
-    "# Drop the wiki_plot and imdb_plot columns\n",
     "df = df.drop(['wiki_plot','imdb_plot'], axis=1)\n",
     "df.head()"
    ]
@@ -285,7 +280,7 @@
      "text": [
       "Input example: Today (May 19, 2016) is his only daughter's wedding.\n",
       "\n",
-      "Output example: ['today', 'may', 'is', 'his', 'onli', 'daughter', \"'s\", 'wed'] \n"
+      " Output example: ['today', 'may', 'is', 'his', 'onli', 'daughter', \"'s\", 'wed'] \n"
      ]
     }
    ],
@@ -294,7 +289,6 @@
     "import re\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "\n",
-    "# Instantiate the stemmer for english\n",
     "stemmer = SnowballStemmer(\"english\")\n",
     "\n",
     "def tokenize_and_stem(text):\n",
@@ -308,8 +302,7 @@
     "    return stems\n",
     "\n",
     "print(\"Input example: Today (May 19, 2016) is his only daughter's wedding.\")\n",
-    "print('')\n",
-    "print('Output example: %s '%tokenize_and_stem(\"Today (May 19, 2016) is his only daughter's wedding.\"))"
+    "print('\\n','Output example: %s '%tokenize_and_stem(\"Today (May 19, 2016) is his only daughter's wedding.\"))"
    ]
   },
   {
@@ -344,13 +337,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Instantiate TfidfVectorizer object with stopwords and tokenizer\n",
+    "# Instantiate with stopwords and tokenizer\n",
     "tfidf_vectorizer = TfidfVectorizer(max_df=0.8, max_features=200000,\n",
     "                                   min_df=0.2, stop_words='english',\n",
     "                                   use_idf=True, tokenizer=tokenize_and_stem,\n",
     "                                   ngram_range=(1,3))\n",
     "\n",
-    "# Fit and transform the tfidf_vectorizer with the plot\n",
     "tfidf_matrix = tfidf_vectorizer.fit_transform([x for x in df[\"plot\"]])\n",
     "\n",
     "print(tfidf_matrix.shape)"
@@ -492,10 +484,8 @@
     "# Set seed for reproducibility\n",
     "np.random.seed(5)\n",
     "\n",
-    "# Instantiate k-means with a 5 cluster division\n",
     "km = KMeans(n_clusters=5)\n",
     "\n",
-    "# Fit the k-means object with tfidf_matrix\n",
     "km.fit(tfidf_matrix)\n",
     "\n",
     "# Add the cluster column to the DataFrame\n",
@@ -550,17 +540,13 @@
     "# Create mergings matrix\n",
     "mergings = linkage(similarity_distance, method='complete')\n",
     "\n",
-    "# Plot the dendrogram, using title as label column\n",
     "dendrogram_ = dendrogram(mergings, orientation=\"left\",\n",
     "               labels=[x for x in df[\"title\"]],\n",
     "               leaf_font_size=50)\n",
     "\n",
-    "# Adjust the plot\n",
     "fig = plt.gcf()\n",
     "_ = [lbl.set_color('r') for lbl in plt.gca().get_xmajorticklabels()]\n",
     "fig.set_size_inches(20, 80)\n",
-    "\n",
-    "# Show the plotted dendrogram\n",
     "plt.show()"
    ]
   },
@@ -579,10 +565,7 @@
     "\n",
     "<p style=\"text-align: justify;\">\n",
     "    <br /> \n",
-    "Bravehart's most similar movie is Gladiator, it can be seen at the yellow branch. That would explain why were they my favourite movies when I was a kid.\n",
-    "    <br /> \n",
-    "<br /> \n",
-    "On the other hand, Forrest Gump is a movie that doesen't have much similarities with others as seen on the green branch, maybe that is te reason why is my favourite movie now.\n",
+    "There are some obvious similarities such as both Godfather's movies, but there are some others such as Titanic with City Lights that we know are not alike. A next step would be to investigate these plots and match words to try to understand this situation, but it is not promising. Although the results are not acceptable was an experiment worht trying.\n",
     "</p>"
    ]
   },
